--- a/templates/userIndex.html
+++ b/templates/userIndex.html
@@ -18,6 +18,11 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/userFile.css') }}"
     />
+
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/header.css') }}"
+    />
   </head>
   <body>
     {% include 'header.html' %}
