--- a/templates/success.html
+++ b/templates/success.html
@@ -13,6 +13,12 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/global.css') }}"
     />
+
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/header.css') }}"
+    />
+
   </head>
   <body>
     {% include 'header.html' %}
